src/components/ecosia/Popover/Popover.scss
@use '../../../scss/variables' as *;
@use '../../../scss/spaces' as *;
@use '../../../scss/typography' as *;
@use '../../../scss/colors' as *;
@use '../../../scss/borders' as *;
@use '../../../scss/elevations' as *;
@use '../../../scss/animations' as *;

$max-width: 280px;

.popover {
  display: inline-flex;
  position: relative;
  cursor: pointer;

  &:focus {
    outline: 2px solid var(--color-focused);
    outline-offset: 2px;
  }
}

.popover__toggle {
  display: inline-flex;
  position: relative;

  &:focus {
    outline: 2px solid var(--color-focused);
    outline-offset: 2px;
  }
}

.popover__content,
.popover__arrow {
  opacity: 0;
  transition: opacity $timing-1s $easing, transform $timing-1s $easing;
  pointer-events: none;

  &--visible {
    opacity: 1;
    pointer-events: auto;
  }
}

.popover__content {
  position: absolute;
  z-index: 900;
  width: max-content;
  max-width: $max-width;
  padding: 0;
  border-radius: $border-radius-l;
  background-color: var(--color-surface-brand-secondary);
  color: var(--color-text-inverse-primary);
  font-size: $font-m;
  cursor: default;
  box-shadow: $elevation-2;
  overflow: hidden;

  &:focus {
    outline: 2px solid var(--color-focused);
    outline-offset: 2px;
  }
}

.popover__badge {
  display: inline-block;
  padding: $space-3xs $space-2xs;
  margin: $space-m $space-m 0 $space-m;
  background-color: rgba(0, 0, 0, 0.2);
  border-radius: $border-radius-s;
  font-size: $font-s;
  font-weight: $font-weight-600;
  line-height: 1;
}

.popover__image {
  width: 100%;
  margin-top: $space-m;
  
  img {
    width: 100%;
    height: auto;
    display: block;
  }
}

.popover__body {
  padding: $space-m;
}

.popover__footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: $space-m;
  padding: 0 $space-m $space-m $space-m;
}

.popover__step {
  font-size: $font-s;
  opacity: 0.8;
}

.popover__button {
  padding: $space-2xs $space-m;
  border: 1px solid currentColor;
  border-radius: 9999px;
  background: transparent;
  color: inherit;
  font-size: $font-s;
  font-weight: $font-weight-600;
  cursor: pointer;
  transition: background-color $timing-1s $easing, opacity $timing-1s $easing;

  &:hover {
    background-color: rgba(0, 0, 0, 0.1);
  }

  &:focus {
    outline: 2px solid var(--color-focused);
    outline-offset: 2px;
  }
}

.popover__arrow {
  position: absolute;
  z-index: 1000;
  width: $space-m * 2;
  height: $space-m;
  margin-top: -1px;
  overflow: hidden;
  pointer-events: none;

  &::after {
    content: "";
    position: absolute;
    top: 0;
    left: 50%;
    width: $space-s;
    height: $space-s;
    transform: translate(-50%, -50%) rotate(45deg);
    background-color: var(--color-surface-brand-secondary);
    box-shadow: $elevation-2;
  }
}

// Position variants - Center Top
.popover--side-center-top {
  .popover__content {
    left: 50%;
    transform: translate(-50%, -100%);
    top: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(-50%, calc(-100% + #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: 50%;
    top: -$space-m;
    transform: translate(-50%, 0) rotate(0);
  }
}

// Center Bottom
.popover--side-center-bottom {
  .popover__content {
    left: 50%;
    transform: translate(-50%, 100%);
    bottom: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(-50%, calc(100% - #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: 50%;
    bottom: -$space-m;
    transform: translate(-50%, 0) rotate(180deg);
  }
}

// Left positions
.popover--side-left-top {
  .popover__content {
    left: -$space-m;
    transform: translate(0, -100%);
    top: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(0, calc(-100% + #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: 50%;
    top: -$space-m;
    transform: translate(-50%, 0) rotate(0);
  }
}

.popover--side-left-center {
  .popover__content {
    top: 50%;
    transform: translate(-100%, -50%);
    left: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(calc(-100% + #{$slide-offset * 0.5}%), -50%);
    }
  }

  .popover__arrow {
    left: -$space-m;
    top: 50%;
    transform: translate(-25%, -50%) rotate(-90deg);
  }
}

.popover--side-left-bottom {
  .popover__content {
    left: -$space-m;
    transform: translate(0, 100%);
    bottom: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(0, calc(100% - #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: 50%;
    bottom: -$space-m;
    transform: translate(-50%, 0) rotate(180deg);
  }
}

// Right positions
.popover--side-right-top {
  .popover__content {
    right: -$space-m;
    transform: translate(0, -100%);
    top: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(0, calc(-100% + #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: 50%;
    top: -$space-m;
    transform: translate(-50%, 0) rotate(0);
  }
}

.popover--side-right-center {
  .popover__content {
    top: 50%;
    transform: translate(100%, -50%);
    right: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(calc(100% - #{$slide-offset * 0.5}%), -50%);
    }
  }

  .popover__arrow {
    right: -$space-m;
    top: 50%;
    transform: translate(25%, -50%) rotate(90deg);
  }
}

.popover--side-right-bottom {
  .popover__content {
    right: -$space-m;
    transform: translate(0, 100%);
    bottom: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(0, calc(100% - #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: 50%;
    bottom: -$space-m;
    transform: translate(-50%, 0%) rotate(180deg);
  }
}

// Top positions
.popover--side-top-left {
  .popover__content {
    left: 0;
    transform: translate(0, -100%);
    top: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(0, calc(-100% + #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: $space-m;
    top: -$space-m;
    transform: translate(0, 0) rotate(0);
  }
}

.popover--side-top-center {
  .popover__content {
    left: 50%;
    transform: translate(-50%, -100%);
    top: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(-50%, calc(-100% + #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: 50%;
    top: -$space-m;
    transform: translate(-50%, 0) rotate(0);
  }
}

.popover--side-top-right {
  .popover__content {
    right: 0;
    transform: translate(0, -100%);
    top: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(0, calc(-100% + #{$slide-offset}%));
    }
  }

  .popover__arrow {
    right: $space-m;
    top: -$space-m;
    transform: translate(0, 0) rotate(0);
  }
}

// Bottom positions
.popover--side-bottom-left {
  .popover__content {
    left: 0;
    transform: translate(0, 100%);
    bottom: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(0, calc(100% - #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: $space-m;
    bottom: -$space-m;
    transform: translate(0, 0) rotate(180deg);
  }
}

.popover--side-bottom-center {
  .popover__content {
    left: 50%;
    transform: translate(-50%, 100%);
    bottom: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(-50%, calc(100% - #{$slide-offset}%));
    }
  }

  .popover__arrow {
    left: 50%;
    bottom: -$space-m;
    transform: translate(-50%, 0) rotate(180deg);
  }
}

.popover--side-bottom-right {
  .popover__content {
    right: 0;
    transform: translate(0, 100%);
    bottom: -$space-m;

    &:not(.popover__content--visible) {
      transform: translate(0, calc(100% - #{$slide-offset}%));
    }
  }

  .popover__arrow {
    right: $space-m;
    bottom: -$space-m;
    transform: translate(0, 0) rotate(180deg);
  }
}

